# present-it-backend

./: .env.test  Dockerfile  main.py  presentation.py  pyproject.toml  slide.json  slides.json  test_presentation.py
ai/: gen_audio.py  gen_image.py  gen_prompt.py  modules.py  signatures.py
models/: audio.py  image.py  presentation.py
scripts/: enable_cors.py  test_replicate.py
util/: fileloader.py  gcp.py  imageloader.py
